--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- favicon -->
+    <link
+      type="image/png"
+      sizes="120x120"
+      rel="icon"
+      href="./analung/assets/img/analung-logo.png"
+    />
+
     <!-- custom css  -->
     <link rel="stylesheet" href="./assets/css/style.css">
 
@@ -18,24 +26,32 @@
         <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
             <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
                 <img src="./assets/img/analung-logo.png" alt="" width="100" height="100">
+
             </a>
             <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-                <a class="mr-5 hover:text-gray-900">First Link</a>
-                <a class="mr-5 hover:text-gray-900">Second Link</a>
-                <a class="mr-5 hover:text-gray-900">Third Link</a>
-                <a class="mr-5 hover:text-gray-900">Fourth Link</a>
-            </nav>
-            <button
-                class="inline-flex items-center bg-lime-700 text-white border-1 py-1 px-3 ocus:outline-none hover:bg-lime-600 rounded text-lg mt-4 md:mt-0">Upload
-                DCOM File
 
-            </button>
+                <a class="mr-5 hover:text-gray-900" href="#about">About</a>
+                <a class="mr-5 hover:text-gray-900" href="#workflow">Workflow</a>
+                <a class="mr-5 hover:text-gray-900" href="#contact">Contact</a>
+
+            </nav>
+
+            <div
+                class="upload-btn-wrapper nline-flex items-center bg-lime-700 text-white border-1 py-1 px-3 ocus:outline-none hover:bg-lime-600 rounded text-lg mt-4 md:mt-0">
+
+                Upload
+                DICOM File
+
+
+                <input type="file" id="actual-btn" />
+            </div>
+
         </div>
     </header>
 
 
-    <!-- midsection -->
-    <section class="text-gray-600 body-font">
+    <!-- midsection/ about -->
+    <section class="text-gray-600 body-font" id="about">
         <div class="container mx-auto flex px-5 py-14 md:flex-row flex-col items-center">
             <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0">
                 <img class="object-cover object-center rounded" alt="hero" src="./assets/img/analung-about.png">
@@ -53,21 +69,26 @@
                     user-friendly interface makes it easy for doctors and radiologists to upload and analyze DICOM
                     scans, and our advanced algorithms provide highly accurate results. Trust AnaLUNG to provide the
                     best possible care for your patients and help save lives.</p>
-                <div class="flex justify-center">
-                    <button
-                        class="inline-flex text-white bg-lime-700 border-0 py-2 px-6 focus:outline-none hover:bg-lime-600 rounded text-lg">Upload
-                        DICOM File</button>
 
+                <div
+                    class="upload-btn-wrapper inline-flex items-center bg-lime-700 text-white border-1 py-1 px-3 ocus:outline-none hover:bg-lime-600 rounded text-lg mt-4 md:mt-0">
+
+                    Upload
+                    DICOM File
+
+
+                    <input type="file" id="actual-btn" />
                 </div>
+
             </div>
         </div>
     </section>
 
     <!-- how we works -->
-    <section class="text-gray-600 body-font">
+    <section class="text-gray-600 body-font" id="workflow">
         <div class="container px-5 py-24 mx-auto">
             <div class="flex flex-col text-center w-full mb-20">
-                <h2 class="text-xs text-indigo-500 tracking-widest font-medium title-font mb-1">ROOF PARTY POLAROID</h2>
+                <!-- <h2 class="text-xs text-indigo-500 tracking-widest font-medium title-font mb-1">ROOF PARTY POLAROID</h2> -->
                 <h1 class="sm:text-3xl text-2xl font-medium title-font text-gray-900">How AnaLUNG works?
                 </h1>
             </div>
@@ -77,7 +98,7 @@
                     <div class="flex rounded-lg h-full bg-gray-100 p-8 flex-col">
                         <div class="flex items-center mb-3">
                             <div
-                                class="w-8 h-8 mr-3 inline-flex items-center justify-center rounded-full bg-indigo-500 text-white flex-shrink-0">
+                                class="w-8 h-8 mr-3 inline-flex items-center justify-center rounded-full bg-lime-600 text-white flex-shrink-0">
                                 <i class="fa-solid fa-upload"></i>
                             </div>
                             <h2 class="text-gray-900 text-lg title-font font-medium">Upload</h2>
@@ -92,7 +113,7 @@
                                     successful treatment outcomes. Trust AnaLUNG to provide the best possible care for
                                     your patients and help save lives.</span></p>
 
-                            <a class="mt-3 text-indigo-500 inline-flex items-center" onclick="myFunction1()"
+                            <a class="mt-3 text-lime-600 inline-flex items-center" onclick="myFunction1()"
                                 id="myBtn"><button>Read More</button>
 
                             </a>
@@ -103,7 +124,7 @@
                     <div class="flex rounded-lg h-full bg-gray-100 p-8 flex-col">
                         <div class="flex items-center mb-3">
                             <div
-                                class="w-8 h-8 mr-3 inline-flex items-center justify-center rounded-full bg-indigo-500 text-white flex-shrink-0">
+                                class="w-8 h-8 mr-3 inline-flex items-center justify-center rounded-full bg-lime-600 text-white flex-shrink-0">
                                 <i class="fa-sharp fa-solid fa-bars-progress"></i>
                             </div>
                             <h2 class="text-gray-900 text-lg title-font font-medium">Process</h2>
@@ -120,7 +141,7 @@
                                     outcomes. Trust AnaLUNG to provide the best possible care for your patients and help
                                     save lives.</span></p>
 
-                            <a class="mt-3 text-indigo-500 inline-flex items-center" onclick="myFunction2()"
+                            <a class="mt-3 text-lime-600 inline-flex items-center" onclick="myFunction2()"
                                 id="myBtn"><button>Read More</button>
 
                             </a>
@@ -131,8 +152,8 @@
                     <div class="flex rounded-lg h-full bg-gray-100 p-8 flex-col">
                         <div class="flex items-center mb-3">
                             <div
-                                class="w-8 h-8 mr-3 inline-flex items-center justify-center rounded-full bg-indigo-500 text-white flex-shrink-0">
-                                <i class="fa-duotone fa-check"></i>
+                                class="w-8 h-8 mr-3 inline-flex items-center justify-center rounded-full bg-lime-600 text-white flex-shrink-0">
+                                <i class="fa-solid fa-check"></i>
                             </div>
                             <h2 class="text-gray-900 text-lg title-font font-medium">Result</h2>
                         </div>
@@ -146,7 +167,7 @@
                                     decisions about the next steps in the patient's treatment. Trust AnaLUNG to provide
                                     the best possible care for your patients and help save lives.</span></p>
 
-                            <a class="mt-3 text-indigo-500 inline-flex items-center" onclick="myFunction3()"
+                            <a class="mt-3 text-lime-600 inline-flex items-center" onclick="myFunction3()"
                                 id="myBtn"><button>Read More</button>
 
                             </a>
@@ -156,6 +177,103 @@
             </div>
         </div>
     </section>
+
+    <!-- contact -->
+    <section class="text-gray-600 body-font relative" id="contact">
+        <div class="container px-5 py-24 mx-auto">
+            <div class="flex flex-col text-center w-full mb-12">
+                <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900">Contact Us</h1>
+                <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Contact us for any inquiries or support related to
+                    AnaLUNG.
+                </p>
+            </div>
+            <div class="lg:w-1/2 md:w-2/3 mx-auto">
+                <div class="flex flex-wrap -m-2">
+                    <div class="p-2 w-1/2">
+                        <div class="relative">
+                            <label for="name" class="leading-7 text-sm text-gray-600">Name</label>
+                            <input type="text" id="name" name="name"
+                                class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
+                        </div>
+                    </div>
+                    <div class="p-2 w-1/2">
+                        <div class="relative">
+                            <label for="email" class="leading-7 text-sm text-gray-600">Email</label>
+                            <input type="email" id="email" name="email"
+                                class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
+                        </div>
+                    </div>
+                    <div class="p-2 w-full">
+                        <div class="relative">
+                            <label for="message" class="leading-7 text-sm text-gray-600">Message</label>
+                            <textarea id="message" name="message"
+                                class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 h-32 text-base outline-none text-gray-700 py-1 px-3 resize-none leading-6 transition-colors duration-200 ease-in-out"></textarea>
+                        </div>
+                    </div>
+                    <div class="p-2 w-full">
+                        <button
+                            class="flex mx-auto text-white bg-lime-700 border-0 py-2 px-8 focus:outline-none hover:bg-lime-600 rounded text-lg">Submit</button>
+                    </div>
+                    <div class="p-2 w-full pt-8 mt-8 border-t border-gray-200 text-center">
+                        <a class="text-indigo-500">contact@analung.com</a>
+                        <p class="leading-normal my-5">Hospital Street
+                            <br>Kathmandu, Nepal
+                        </p>
+                        <span class="inline-flex">
+                            <a class="text-gray-500">
+                                <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    class="w-5 h-5" viewBox="0 0 24 24">
+                                    <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
+                                </svg>
+                            </a>
+                            <a class="ml-4 text-gray-500">
+                                <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    class="w-5 h-5" viewBox="0 0 24 24">
+                                    <path
+                                        d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z">
+                                    </path>
+                                </svg>
+                            </a>
+                            <a class="ml-4 text-gray-500">
+                                <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                    stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+                                    <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
+                                    <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
+                                </svg>
+                            </a>
+                            <a class="ml-4 text-gray-500">
+                                <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    class="w-5 h-5" viewBox="0 0 24 24">
+                                    <path
+                                        d="M21 11.5a8.38 8.38 0 01-.9 3.8 8.5 8.5 0 01-7.6 4.7 8.38 8.38 0 01-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 01-.9-3.8 8.5 8.5 0 014.7-7.6 8.38 8.38 0 013.8-.9h.5a8.48 8.48 0 018 8v.5z">
+                                    </path>
+                                </svg>
+                            </a>
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- footer  -->
+    <footer class="text-gray-600 body-font">
+        <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
+
+            <p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">©
+                2023 AnaLUNG
+
+            </p>
+            <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
+                <a class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
+                    <img src="./assets/img/analung-logo.png" alt="AnaLUNG_logo" width="90" height="90">
+
+                </a>
+            </span>
+
+        </div>
+    </footer>
+
     <!-- fontawesome -->
     <script src="https://kit.fontawesome.com/3a5f8e8284.js" crossorigin="anonymous"></script>
     <!-- script  -->
